--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.lambdacube.bndploy</groupId>
 	<artifactId>bndploy</artifactId>
-	<version>1.3</version>
+	<version>1.4</version>
 	<packaging>bundle</packaging>
 
 	<properties>
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>18.0</version>
+			<version>28.0-jre</version>
 		</dependency>
 
 		<dependency>
