--- a/pom.xml
+++ b/pom.xml
@@ -71,11 +71,11 @@
     <distributionManagement>
         <repository>
             <id>nexus</id>
-            <url>http://nexus.livingobjects.com/repository/releases</url>
+            <url>https://artifactory.liveaction.com/artifactory/releases</url>
         </repository>
         <snapshotRepository>
             <id>nexus</id>
-            <url>http://nexus.livingobjects.com/repository/snapshots</url>
+            <url>https://artifactory.liveaction.com/artifactory/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 
